[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
hashring = "0.3.6"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
