[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = [
	"postgres",
	"runtime-tokio-native-tls",
] }
tokio = { version = "1.40.0", features = ["full"] }
